--- a/api/pom.xml
+++ b/api/pom.xml
@@ -29,7 +29,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>api/</classpathPrefix>
-                            <mainClass>com.chathumina.controller.Application</mainClass>
+                            <mainClass>com.hms.controller.Application</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
