--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.chathumina</groupId>
-    <artifactId>FinalRestAPI</artifactId>
+    <artifactId>SpringMVCRestWithJetty</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
